@@ -18,6 +18,8 @@ Release date and codename to be decided
 - Added message that explains how to quit the server.
 - Fixed a bug on Python 2, that caused ``len`` for 
   :class:`werkzeug.datastructures.CombinedMultiDict` to crash.
+- Added support for specifying a ``Response`` subclass to use when calling
+  :func:`~werkzeug.utils.redirect`\ .
 
 Version 0.9.5
 -------------
